syntax = "proto3";

package types;

import "google/protobuf/timestamp.proto";
import "Types/type_track.proto";

message Playlist {
    string id = 1;
    string title = 2;
    string author_id = 3;
    google.protobuf.Timestamp created_at = 4;
    string avatar_url = 5;
    repeated types.Track tracks = 6;
    int32 track_count = 7;
}
